# proto2ts

./: .gitignore  CMakeLists.txt  README.md
include/proto2ts/: field.hpp  ts_generator.hpp
src/: main.cpp
